tests/frontend/pass/parse_enum.ak
fn main() -> i32 {
    let mode = PadMode::Trim;
    return 0;
}

enum PadMode {
    Pad,
    Trim
}
