tests/frontend/fail/invalid_enum_variant.ak
enum PadMode {
    Pad,
    Trim
}

fn main() -> i32 {
    let mode = PadMode::Unknown;
    return 0;
}
